login page: fix z-index for footer (#4572)

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_login.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_login.scss
@@ -49,9 +49,13 @@
         width: 100%;
     }
 
+    .rex-page-section {
+        position: relative;
+        z-index: 10;
+    }
+
     .rex-global-footer {
         position: fixed;
-        z-index: -1;
         left: 0;
         right: 0;
         bottom: 5px;
